--- a/contact.html
+++ b/contact.html
@@ -58,12 +58,12 @@
 
                     <div class="form-group">
                         <label for="contact">Contact Number</label>
-                        <input type="tel" id="contact" name="contact" placeholder="+1234567890" required />
+                        <input type="tel" id="contact" name="contact" placeholder="+60123456789/+959123456789" required />
                     </div>
 
                     <div class="form-group">
                         <label for="program">Interested Program</label>
-                        <input type="text" id="program" name="program" placeholder="Your program...." required />
+                        <input type="text" id="program" name="program" placeholder="Level of study(field .....).." required />
                     </div>
 
 
